--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ sha2 = "0.9.1"
 rust-crypto = "^0.2"
 bincode = "1.3.1"
 failure = "0.1.8"
+sled = "0.34"
+serde = {version ="1.0", features =["derive"]}
