--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ edition = "2018"
 
 [dependencies]
 
-sha2 = "0.9.1"
+sha2 = "0.9"
 rust-crypto = "^0.2"
-bincode = "1.3.1"
-failure = "0.1.8"
+bincode = "1.3"
+failure = "0.1"
 sled = "0.34"
 serde = {version ="1.0", features =["derive"]}
+log = "0.4"
+env_logger = "0.7.1"
+clap = "~2.33"
