--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,4 @@ serde = {version ="1.0", features =["derive"]}
 log = "0.4"
 env_logger = "0.7.1"
 clap = "~2.33"
-rand = "^0.6"
-bitcoin_hashes = "^0.9"
-secp256k1-sys = "^0.3.0"
-secp256k1 = "0.19.0"
-bitcoincash = "0.23.0"
+bitcoincash-addr = "0.5.2"
