--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Check code format
-      run: cargo fmt --all -- --check
+
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      - name: Run tests
+        run: cargo test  --verbose -- --test-threads=1
+      - name: Check code format
+        run: cargo fmt --all -- --check
